--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wilshop/dashboard",
     "private": false,
-    "version": "3.5.1",
+    "version": "3.5.1-custom.2",
     "type": "module",
     "repository": {
         "type": "git",
