chore: Fix publish_minor workflow
It was always getting skipped because workflows on
a schedule always execute on master

--- a/.github/workflows/publish_minor_to_npm.yml
+++ b/.github/workflows/publish_minor_to_npm.yml
@@ -13,13 +13,11 @@ jobs:
       contents: read
       id-token: write
 
-    # Only allow workflow to run on minor branch
-    if: github.ref == 'refs/heads/minor'
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: minor
           fetch-depth: 0
 
       # Check if branch received commits in the last 24 h; skip remainder if none
