--- a/.prettierignore
+++ b/.prettierignore
@@ -3,3 +3,5 @@ lazy-extensions.module.ts
 shared-extensions.module.ts
 generated-graphql-shop-errors.ts
 generated-graphql-admin-errors.ts
+
+/.nx/workspace-data
