--- a/lerna.json
+++ b/lerna.json
@@ -6,5 +6,6 @@
         "version": {
             "push": false
         }
-    }
+    },
+    "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
