--- a/.github/workflows/publish_to_npm.yml
+++ b/.github/workflows/publish_to_npm.yml
@@ -125,6 +125,10 @@ jobs:
           git add .
           git commit -m "chore: Bump version for ${{ matrix.type }} pre-release"
 
+      - name: Debug - Log all environment variables
+        if: matrix.type == 'release' || steps.commit_check.outputs.should_publish == 'true'
+        run: env | sort
+
       # Publish to npm with appropriate dist-tag
       - name: Publish to NPM (release)
         if: matrix.type == 'release'
