--- a/.github/workflows/publish_to_npm.yml
+++ b/.github/workflows/publish_to_npm.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Setup Node.js
         if: matrix.type == 'release' || steps.commit_check.outputs.should_publish == 'true'
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
           node-version: '24.x'
           registry-url: 'https://registry.npmjs.org'
@@ -125,11 +125,9 @@ jobs:
           git add .
           git commit -m "chore: Bump version for ${{ matrix.type }} pre-release"
 
-      - name: Debug - Log all environment variables
-        if: matrix.type == 'release' || steps.commit_check.outputs.should_publish == 'true'
-        run: env | sort
-
       # Publish to npm with appropriate dist-tag
+      # Note: we do not use `lerna publish` because at the time of writing, it fails to publish
+      # using the Trusted Publishing workflow for some reason.
       - name: Publish to NPM (release)
         if: matrix.type == 'release'
         run: npx lerna exec --no-private -- npm publish --access public
