feat(create): Add Next.js storefront option to create command (#4015)

--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -46,6 +46,7 @@
         "open": "^10.2.0",
         "picocolors": "^1.1.1",
         "semver": "^7.7.2",
+        "tar": "^7.4.3",
         "tcp-port-used": "^1.0.2"
     }
 }
