--- a/packages/create/templates/tsconfig.template.json
+++ b/packages/create/templates/tsconfig.template.json
@@ -14,6 +14,7 @@
     "outDir": "./dist",
     "baseUrl": "./"
   },
+  "include": ["src/**/*.ts"],
   "exclude": [
     "node_modules",
     "migration.ts",
